完成head及新建按钮布局

--- a/widget/index.html
+++ b/widget/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <title>底部导航</title>
+    <title>主页</title>
     <link rel="stylesheet" type="text/css" href="./css/api.css"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     <style>
-        header{ background-color: #f2f2f2; }
-        header ul li { height: 50px; line-height: 50px; text-align: center; display: none; color: #323237; position: relative;font-size: 18px;  }
-        header ul li.active{ display: block; }
+        header{
+            background-color: #f2f2f2;
+        }
+        header ul li {
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+            display: none;
+            color: #323237;
+            position: relative;
+            font-size: 18px;
+            margin-left: 50px;
+        }
+        header ul li.active{
+            display: block;
+        }
+        #topright{
+            height: 50px;
+            width:50px;
+            line-height: 50px;
+            float: right;
+            text-align: center;
+        }
         #footer{  background-color: #f2f2f2; }
         #footer ul li{  padding-top: 36px; padding-bottom: 4px; background: url() no-repeat center 2px; background-size: auto 30px; text-align: center; }
         #footer ul li.active{ color: #6ab494; }
@@ -26,6 +46,9 @@
 <body>
 <div id="wrap" class="flex-wrap flex-vertical">
     <header>
+        <div id="topright">
+            <span>新建</span>
+        </div>
         <ul>
             <li class="border-b active" >云API</li>
             <li class="border-b" >端API</li>
