--- a/widget/index.html
+++ b/widget/index.html
@@ -50,10 +50,10 @@
             <span>新建</span>
         </div>
         <ul>
-            <li class="border-b active" >云API</li>
-            <li class="border-b" >端API</li>
-            <li class="border-b" >开发</li>
-            <li class="border-b" >文档</li>
+            <li class="border-b active" >病历</li>
+            <li class="border-b" >随访</li>
+            <li class="border-b" >科室</li>
+            <li class="border-b" >我</li>
         </ul>
     </header>
     <div id="main" class="flex-con">
@@ -61,10 +61,10 @@
     </div>
     <div id="footer" class="border-t">
         <ul class="flex-wrap" >
-            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con active" >云API</li>
-            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >端API</li>
-            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >开发</li>
-            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >文档</li>
+            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con active" >病历</li>
+            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >随访</li>
+            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >科室</li>
+            <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >我</li>
         </ul>
     </div>
 </div>
