--- a/widget/index.html
+++ b/widget/index.html
@@ -23,7 +23,7 @@
         header ul li.active{
             display: block;
         }
-        #topright{
+        #topright button{
             height: 50px;
             width:50px;
             line-height: 50px;
@@ -47,7 +47,7 @@
 <div id="wrap" class="flex-wrap flex-vertical">
     <header>
         <div id="topright">
-            <span>新建</span>
+            <button name="new-history">新建</button>
         </div>
         <ul>
             <li class="border-b active" >病历</li>
