--- a/widget/html/frame2.html
+++ b/widget/html/frame2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <title>开发</title>
+    <title>科室</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
     <style>
@@ -11,6 +11,6 @@
     </style>
 </head>
 <body>
-    <div class="empty">开发</div>
+    <div class="empty">科室</div>
 </body>
 </html>
