增加新建病历页面newhis.html

--- a/widget/html/frame0.html
+++ b/widget/html/frame0.html
@@ -7,17 +7,10 @@
     <link rel="stylesheet" type="text/css" href="../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
     <style>
-        .empty{
-            text-align: center;
-            padding: 120px 0;
-        }
+        .empty{ text-align: center; padding: 120px 0; }
     </style>
 </head>
 <body>
-    <div class="empty">
-        <span>
-            病历
-        </span>
-    </div>
+    <div class="empty">病历</div>
 </body>
 </html>
