--- a/widget/index.html
+++ b/widget/index.html
@@ -28,6 +28,7 @@
             width:50px;
             line-height: 50px;
             float: right;
+            font-size: 15px;
             text-align: center;
         }
         #footer{  background-color: #f2f2f2; }
