打开新建float和onclick冲突未解决

--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -7,19 +7,13 @@
     <link rel="stylesheet" type="text/css" href="../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
     <style>
-        .empty{
-            text-align: center;
-            padding: 120px 0;
-        }
-        #main{
-            padding: 0px 0px;
-        }
         header{
             background-color: #f2f2f2;
             height: 50px;
             line-height: 50px;
             text-align: center;
             font-size: 18px;
+            position: relative;
         }
         #topleft button{
             height: 50px;
@@ -61,7 +55,7 @@
     </style>
 </head>
 <body>
-    <div id="main">
+    <div id="wrap" class="flex-wrap flex-vertical">
         <header>
             <div id="topleft">
                 <button name="cancel">取消</button>
