--- a/widget/index.html
+++ b/widget/index.html
@@ -23,13 +23,14 @@
         header ul li.active{
             display: block;
         }
-        #topright button{
+        .topright{
+            /*float: right;*/
             height: 50px;
             width:50px;
             line-height: 50px;
-            float: right;
             font-size: 15px;
             text-align: center;
+            z-index: 10;
         }
         #footer{  background-color: #f2f2f2; }
         #footer ul li{  padding-top: 36px; padding-bottom: 4px; background: url() no-repeat center 2px; background-size: auto 30px; text-align: center; }
@@ -47,8 +48,8 @@
 <body>
 <div id="wrap" class="flex-wrap flex-vertical">
     <header>
-        <div id="topright">
-            <button name="new-history">新建</button>
+        <div class="topright">
+            <a href="" tapmode="presshover" onclick="openNewHisWindow()">新建</a>
         </div>
         <ul>
             <li class="border-b active" >病历</li>
@@ -86,9 +87,9 @@
         var eHeaderLis = $api.domAll('header li'),
             frames = [];
         for (var i = 0,len = eHeaderLis.length; i < len; i++) {
-                frames.push( { 
-                    name: 'frame'+i, 
-                    url: './html/frame'+i+'.html', 
+                frames.push( {
+                    name: 'frame'+i,
+                    url: './html/frame'+i+'.html',
                     bgColor : 'rgba(0,0,0,.2)',
                     bounces:true
                 } )
@@ -97,9 +98,9 @@
             name: 'group',
             scrollEnabled: false,
             rect: {
-                x: 0, 
-                y: $api.dom('header').offsetHeight, 
-                w: api.winWidth, 
+                x: 0,
+                y: $api.dom('header').offsetHeight,
+                w: api.winWidth,
                 h: $api.dom('#main').offsetHeight
             },
             index: 0,
@@ -128,6 +129,16 @@
         api.setFrameGroupIndex({
             name: 'group',
             index: index
+        });
+    }
+
+    function openNewHisWindow() {
+        api.openWin({
+            name: "newhis",
+            url: './html/newhis.html',
+            pageParam: {},
+            bounces: false,
+            opaque: false
         });
     }
 </script>
