--- a/widget/index.html
+++ b/widget/index.html
@@ -48,9 +48,9 @@
 <body>
 <div id="wrap" class="flex-wrap flex-vertical">
     <header>
-        <div class="topright">
+        <span class="topright">
             <a href="" tapmode="presshover" onclick="openNewHisWindow()">新建</a>
-        </div>
+        </span>
         <ul>
             <li class="border-b active" >病历</li>
             <li class="border-b" >随访</li>
