--- a/widget/index.html
+++ b/widget/index.html
@@ -24,7 +24,7 @@
             display: block;
         }
         .topright{
-            /*float: right;*/
+            float: right;
             height: 50px;
             width:50px;
             line-height: 50px;
