--- a/widget/index.html
+++ b/widget/index.html
@@ -9,6 +9,7 @@
     <style>
         header{
             background-color: #f2f2f2;
+            position: relative;
         }
         .top-button{
             margin: 0 1em;
