--- a/widget/index.html
+++ b/widget/index.html
@@ -49,7 +49,7 @@
 <script type="text/javascript">
     apiready = function () {
         var listView = api.require('listView');
-        listView.open({jj
+        listView.open({
             "x": 0,
             "y": 50px,
             "w": api.frameWidth,
