调整头部和状态栏重叠问题

--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -162,3 +162,9 @@
     </div>
 </body>
 </html>
+<script type="text/javascript" src="script/api.js"></script>
+<script type="text/javascript">
+    apiready = function () {
+        $api.fixStatusBar( $api.dom('header') );
+    }
+</script>
