--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -6,6 +6,7 @@
     <title>新建病历</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+    <script type="text/javascript" src="../script/api.js"></script>
     <style>
         /*header{
             background-color: #f2f2f2;
@@ -136,10 +137,14 @@
         </div>
     </div>
 </body>
-</html>
-<script type="text/javascript" src="script/api.js"></script>
 <script type="text/javascript">
     apiready = function () {
         $api.fixStatusBar( $api.dom('header') );
+
+        window.closeWin= function(winName) {
+            api.closeWin();
+        }
     }
 </script>
+</html>
+
