--- a/widget/index.html
+++ b/widget/index.html
@@ -71,8 +71,8 @@
             "cellBgColor": "#F0F5F5",
             "cellSelectColor": "#E9E9E9",
             "data":[
-                {   
-                    "placeHoldImg": "./image/bottombtn0101.png",
+                {
+                    "placeHoldImg": "image/bottombtn0101.png",
                     "title": "患者甲",
                     "titleLocation": "left",
                     "titleSize": "16",
@@ -82,7 +82,7 @@
                     "subTitleSize": "14",
                     "subTitleColor": "#999999"
                 }, {
-                    "placeHoldImg": "./image/bottombtn0201.png",
+                    "placeHoldImg": "image/bottombtn0201.png",
                     "title": "患者乙",
                     "titleLocation": "left",
                     "titleSize": "16",
@@ -119,19 +119,19 @@
 
         listView.setRefreshHeader({
                 bgColor: "#f5f5f5",
-                loadingImg : "./image/bottombtn0301.png"
-            }, 
+                loadingImg : "image/bottombtn0301.png"
+            },
             function(ret,err){
                 /* 触发加载事件, 此处应使用使用 reloadData 方法.*/
                 listView.reloadData({
                     data:[
                         {
-                            "placeHoldImg":"./image/bottombtn0301.png",
+                            "placeHoldImg":"image/bottombtn0301.png",
                             "title":"新标题1",
                             "subTitle":"新子标题1"
                         },
                         {
-                            "placeHoldImg":"./image/bottombtn0401.png",
+                            "placeHoldImg":"image/bottombtn0401.png",
                             "title":"新标题2",
                             "subTitle":"新子标题2"
                         }]
@@ -142,19 +142,19 @@
 
         listView.setRefreshFooter({
                 bgColor: "#f5f5f5",
-                loadingImg : "./image/bottombtn0301.png"
+                loadingImg : "image/bottombtn0301.png"
             },
             function(ret,err){
                 /* 触发加载事件, 此处应使用使用 appendData 方法.*/
                 listView.appendData({
                     data:[
                         {
-                            "placeHoldImg":"./image/bottombtn0301.png",
+                            "placeHoldImg":"image/bottombtn0301.png",
                             "title":"新标题3",
                             "subTitle":"新子标题3"
                         },
                         {
-                            "placeHoldImg":"./image/bottombtn0401.png",
+                            "placeHoldImg":"image/bottombtn0401.png",
                             "title":"新标题4",
                             "subTitle":"新子标题4"
                         }]
@@ -168,8 +168,8 @@
             name: type,
             url: './html/' + type + '.html',
             pageParam: {},
-            bounces: false,
-            opaque: false
+            reload: true,
+            bounces: false
         });
     }
 </script>
