使用UISearchBar实现搜索页面

--- a/widget/index.html
+++ b/widget/index.html
@@ -33,7 +33,7 @@
             <a href="" tapmode="presshover" onclick="openWin('option')">设置</a>
         </div>
         <div class='top-button fr' >
-            <a href="" tapmode="presshover" onclick="openWin('search')">查找</a>
+            <a href="" tapmode="presshover" onclick="openSearch()">查找</a>
         </div>
         <div class='top-button fr' >
             <a href="" tapmode="presshover" onclick="openWin('newhis')">新增</a>
@@ -76,7 +76,7 @@
             rightBtns: [{
                 bgColor: '#888', //（可选项）字符串类型；按钮背景色，支持rgb、rgba、#；默认：'#388e8e'
                 activeBgColor: '',  //（可选项）字符串类型；按钮按下时的背景色，支持rgb、rgba、#
-                width: 70,          //（可选项）数字类型；按钮的宽度；默认：w / 4       
+                width: 70,          //（可选项）数字类型；按钮的宽度；默认：w / 4
                 title: '修改',          //（可选项）字符串类型；按钮标题，水平、垂直居中
                 titleSize: 12,      //（可选项）数字类型；按钮标题文字大小；默认：12
                 titleColor: '#fff', //（可选项）字符串类型；按钮标题文字颜色，支持rgb、rgba、#；默认：'#ffffff'
@@ -85,7 +85,7 @@
             },{
                 bgColor: '#888', //（可选项）字符串类型；按钮背景色，支持rgb、rgba、#；默认：'#388e8e'
                 activeBgColor: '',  //（可选项）字符串类型；按钮按下时的背景色，支持rgb、rgba、#
-                width: 70,          //（可选项）数字类型；按钮的宽度；默认：w / 4       
+                width: 70,          //（可选项）数字类型；按钮的宽度；默认：w / 4
                 title: '删除',          //（可选项）字符串类型；按钮标题，水平、垂直居中
                 titleSize: 12,      //（可选项）数字类型；按钮标题文字大小；默认：12
                 titleColor: '#fff', //（可选项）字符串类型；按钮标题文字颜色，支持rgb、rgba、#；默认：'#ffffff'
@@ -105,7 +105,7 @@
                     titleSize: 12.0,
                     titleColor: '#000',
                     subTitleSize: 12.0,
-                    subTitleColor: '#000', 
+                    subTitleColor: '#000',
                     remarkColor: '#000',
                     remarkSize: 16,
                     remarkIconWidth: 30
@@ -114,7 +114,16 @@
 
             fixedOn: api.frameName
         }, function( ret, err ){
-            
+            // if( ret ){
+            //      alert( JSON.stringify( ret ) );
+            // }else{
+            //      alert( JSON.stringify( err ) );
+            // }
+            api.toast({
+                msg: ret,
+                duration: 2000,
+                location: "top"
+            });
         });
         UIListView.setRefreshHeader({
                 bgColor: "#f5f5f5",
@@ -276,6 +285,56 @@
             pageParam: {},
             reload: true,
             bounces: false
+        });
+    }
+    function openSearch() {
+        var UISearchBar = api.require('UISearchBar');
+        UISearchBar.open({
+            placeholder: '请输入搜索关键字',
+            historyCount: 10,
+            showRecordBtn: true,
+            texts: {
+                cancelText: '取消',
+                clearText: '清除搜索记录'
+            },
+            styles: {
+                navBar: {
+                    bgColor: '#FFFFFF',
+                    borderColor: '#ccc'
+                },
+                searchBox: {
+                    bgImg: '',
+                    color: '#000',
+                    height: 44
+                },
+                cancel: {
+                    bg: 'rgba(0,0,0,0)',
+                    color: '#D2691E',
+                    size: 16
+                },
+                list: {
+                    color: '#696969',
+                    bgColor: '#FFFFFF',
+                    borderColor: '#eee',
+                    size: 16
+                },
+                clear: {
+                    color: '#000000',
+                    borderColor: '#ccc',
+                    size: 16
+                }
+            }
+        },function( ret, err ){
+            api.toast({
+                msg: ret,
+                duration: 2000,
+                location: "top"
+            });
+            // if( ret ){
+            //      alert( JSON.stringify( ret ) );
+            // }else{
+            //      alert( JSON.stringify( err ) );
+            // }
         });
     }
 </script>
